# PV_Panel_Warranty

./: .gitignore  code_of_graenty.ipynb  pyproject.toml
pv_panel/: db.sqlite3  manage.py
pv_panel/core/: admin.py  forms.py  models.py  views.py
pv_panel/core/migrations/: 0001_initial.py  0002_remove_installation_product_and_more.py  0002_remove_installation_product_installation_products.py  0003_installation_count.py
pv_panel/core/templates/: base.html  toasts.html
pv_panel/nasab_users/: admin.py  apps.py  models.py  urls.py  views.py
pv_panel/nasab_users/migrations/: 0001_initial.py
pv_panel/nasab_users/templates/: installer_login.html  installer_panel.html
pv_panel/pv_panel/: asgi.py  settings.py  urls.py  wsgi.py
pv_panel/users/: admin.py  forms.py  models.py  urls.py  views.py
pv_panel/users/migrations/: 0001_initial.py
pv_panel/users/templates/: core_login.html  user_panel.html
